# pdcst

./: .gitignore  CRITICAL_ANALYSIS.md  Cargo.toml  EVENT_ARCHITECTURE_PLAN.md  PHASE1_COMPLETE.md  PROJECT_REALITY.md  README.md  REMEDIATION_PLAN.md  STATUS.md
.github/workflows/: audit.yml  ci.yml  release.yml  style.yml
crates/pdcst/: Cargo.toml
crates/pdcst/migrations/: 20250111000001_initial_schema.up.sql  20250712000001_auto_queue_config.up.sql  20250712000002_subscription_last_error.down.sql  20250712000002_subscription_last_error.up.sql  20250713000001_episode_is_new.down.sql  20250713000001_episode_is_new.up.sql  20250713000002_subscription_queue_order.down.sql  20250713000002_subscription_queue_order.up.sql
crates/pdcst/src/: config.rs  lib.rs  main.rs  retention.rs
crates/pdcst/src/app/: auto_advance.rs  events.rs  input.rs  mod.rs  opml.rs  update.rs
crates/pdcst/src/app/state/: library.rs  mod.rs  navigation.rs  playback.rs
crates/pdcst/src/artwork/: fetcher.rs  manager.rs  protocol.rs  renderer.rs
crates/pdcst/src/audio/: stream.rs  wsola_source.rs
crates/pdcst/src/audio/player/: mod.rs  tests.rs
crates/pdcst/src/download/: manager.rs
crates/pdcst/src/feed/: fetcher.rs  parser.rs  refresher.rs  scheduler.rs  search.rs
crates/pdcst/src/models/: config.rs  episode.rs  mod.rs  subscription.rs
crates/pdcst/src/queue/: manager.rs  ordering.rs
crates/pdcst/src/search/: itunes.rs
crates/pdcst/src/storage/db/: episodes.rs  queue.rs  subscriptions.rs  tests.rs
crates/pdcst/src/ui/: mod.rs
crates/pdcst/src/utils/: logging.rs  mod.rs  text.rs
crates/pdcst/tests/: library_nav.rs  queue_ops.rs  render_smoke.rs
crates/pdcst/tests/common/: mod.rs
crates/podcast-tui/: Cargo.toml
crates/podcast-tui/migrations/: 20250712000001_auto_queue_config.down.sql
crates/podcast-tui/src/: config.rs  error.rs  lib.rs
crates/podcast-tui/src/app/: auto_advance.rs  events.rs  input.rs  mod.rs  state.rs  update.rs
crates/podcast-tui/src/app/state/: library.rs  mod.rs  playback.rs
crates/podcast-tui/src/audio/: controls.rs  mod.rs  stream.rs  wsola_source.rs
crates/podcast-tui/src/audio/player/: mod.rs  tests.rs
crates/podcast-tui/src/download/: manager.rs  mod.rs
crates/podcast-tui/src/feed/: fetcher.rs  mod.rs  refresher.rs
crates/podcast-tui/src/models/: config.rs  subscription.rs
crates/podcast-tui/src/queue/: manager.rs  ordering.rs
crates/podcast-tui/src/search/: mod.rs
crates/podcast-tui/src/storage/db/: episodes.rs  mod.rs  playback.rs  queue.rs  subscriptions.rs
crates/podcast-tui/src/ui/: mod.rs
crates/podcast-tui/src/ui/components/: mod.rs
crates/podcast-tui/tests/: queue_ops.rs  render_smoke.rs
crates/podcast-tui/tests/common/: mod.rs
crates/wsola/: Cargo.toml  README.md
crates/wsola/src/: lib.rs
crates/wsola/tests/: integration.rs  props.proptest-regressions  props.rs
docs/: ROADMAP.md
migrations/: 001_initial_schema.sql  20250111000001_initial_schema.down.sql
scripts/: smoke.exp
src/: error.rs  lib.rs  main.rs
src/app/: events.rs  mod.rs  state.rs
src/artwork/: cache.rs  fetcher.rs  manager.rs  mod.rs
src/audio/: controls.rs  mod.rs  player.rs  stream.rs
src/audio/player/: mod.rs  tests.rs
src/download/: manager.rs  progress.rs
src/feed/: fetcher.rs  mod.rs  opml.rs  parser.rs  refresher.rs  search.rs
src/models/: config.rs  episode.rs  queue.rs  subscription.rs
src/queue/: manager.rs  mod.rs  ordering.rs
src/search/: itunes.rs
src/storage/: db.rs
src/storage/db/: mod.rs  subscriptions.rs  tests.rs
src/ui/: mod.rs
src/ui/components/: episode_list.rs  playback.rs  queue.rs
src/utils/: format.rs  logging.rs  mod.rs  time.rs
