[package]
name = "podcast-tui"
version = "1.0.0"
edition = "2024"
authors = ["Podcast TUI Contributors"]
description = "A terminal-based podcast player with PocketCasts feature parity"
license = "MIT"

[dependencies]
# TUI
ratatui = "0.29"
crossterm = "0.28"
ratatui-image = "2.0"

# Image processing
image = "0.25"

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"

# Audio
rodio = "0.19"

# HTTP/Networking. rustls + ring only: no native-tls/openssl, no aws-lc. Pull no
# default TLS, take rustls with no baked-in provider, and install the ring
# provider once at startup (see main.rs). charset for .text() decoding; http2
# for multiplexed feed fetches.
reqwest = { version = "0.12", default-features = false, features = ["stream", "json", "charset", "http2", "rustls-tls-webpki-roots-no-provider"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12", "logging"] }
tokio-util = { version = "0.7", features = ["codec"] }

# RSS/XML
rss = "2.0"
quick-xml = "0.36"
opml = "1.1"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid", "migrate"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.11", features = ["v4", "serde"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Utilities
dirs = "5.0"
url = "2.5"
bytes = "1.9"
futures = "0.3"
urlencoding = "2.1"

# CLI
clap = { version = "4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

[dev-dependencies]
tempfile = "3.0"
mockito = "1.0"
proptest = "1.0"

[[bin]]
name = "podcast-tui"
path = "src/main.rs"
