# pdcst workspace: the pdcst binary and the wsola time-stretch library as
# sibling crates. Metadata and dependency versions are hoisted here so the two
# crates share one source of truth, but each crate versions independently (no
# workspace.package.version); wsola will publish on its own cadence.
[workspace]
resolver = "3"
members = ["crates/pdcst", "crates/wsola"]

[workspace.package]
edition = "2024"
license = "MIT"
authors = ["Jacob Heider"]
repository = "https://github.com/jhheider/pdcst"

[workspace.dependencies]
# Internal
wsola = { path = "crates/wsola", version = "0.1" }

# TUI
ratatui = "0.30"
crossterm = "0.29"

# Async
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["codec"] }

# Audio
rodio = "0.22"

# HTTP/TLS: rustls + ring only (no native-tls/openssl, no aws-lc). No default
# TLS, rustls with no baked-in provider, ring installed at startup (see main.rs).
reqwest = { version = "0.13", default-features = false, features = ["stream", "json", "query", "charset", "http2", "rustls-no-provider", "webpki-roots"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12", "logging"] }

# RSS/XML
rss = "2.1"
quick-xml = "0.41"
opml = "1.1"

# Database
sqlx = { version = "0.9", features = ["runtime-tokio", "sqlite", "chrono", "uuid", "migrate"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "1.1"

# Misc
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
anyhow = "1.0"
thiserror = "2.0"
dirs = "6.0"
url = "2.5"
bytes = "1.9"
futures = "0.3"
urlencoding = "2.1"
# Text width/segmentation for terminal-safe rendering. Already in the tree via
# ratatui; promoted to direct deps (no new tree) for feed-text normalization.
unicode-width = "0.2"
unicode-segmentation = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# Dev
tempfile = "3.0"
mockito = "1.0"
proptest = "1.0"
atom_syndication = { version = "0.12", default-features = false }
